--- a/ref.bib
+++ b/ref.bib
@@ -21,12 +21,12 @@
     keywords = {physics}
 }
  
-@online{knuthwebsite,
-    author = "Donald Knuth",
-    title = "Knuth: Computers and Typesetting",
-    url  = "http://www-cs-faculty.stanford.edu/~uno/abcde.html",
-    addendum = "(accessed: 01.09.2016)",
-    keywords = "latex,knuth"
+@online{Figure1,
+    author = "Grusin, Mike",
+    title = "Sparkfun",
+    url  = "https://learn.sparkfun.com/tutorials/bmp180-barometric-pressure-sensor-hookup-/all ",
+    addendum = "(accessed: 10.01.2021)",
+    keywords = "latex,fig1"
 }
  
 @inbook{knuth-fa,
